# pgen

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  defs.yaml  ideas.txt  justfile  template.yaml
benchmarks/: CMakeLists.txt
cmake/: build-options.cmake  clang-tidy.cmake  compile-options.cmake  dependencies.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: cli.md  template.md
include/: inja.hpp
src/: cli.cpp  cli.hpp  cmd.cpp  cmd.hpp  inja.hpp  lib.cpp  lib.hpp  main.cpp  point.hpp  project.hpp  render.cpp  render.hpp  serial.cpp  serial.hpp  template.cpp  template.hpp  validation.cpp  validation.hpp  write.cpp  write.hpp
testgen/include/fruits/: apple.hpp
testgen/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: pgen_test.cpp  render_tests.cpp  serial_tests.cpp  utils.cpp  utils.hpp  validation_tests.cpp  write_tests.cpp
